<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>net.sf.exlp</groupId>
	<artifactId>exlp</artifactId>
	<version>0.1.15-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ExLP (Extensible Logfile Processor)</name>
	<description>ExLP (Extensible Logfile Processor)</description>
	<url>https://github.com/thorsten-k/exlp</url>
	
	<modules>
		<module>addon</module>
		<module>bom</module>
		<module>client</module>
		<module>core</module>
		<module>doc</module>
		<module>ejb</module>
		<module>interfaces</module>
		<module>maven</module>
		<module>shell</module>
		<module>util</module>
		<module>xml</module>
	</modules>
	
	<properties>
		<my.build.directory>target</my.build.directory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    	
    	<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
    	<maven.ignore>file://${basedir}/../maven/src/main/resources/exlp/maven/exlp-versions.xml</maven.ignore>
	</properties>
	
	<prerequisites>
		<maven>3.1</maven>
	</prerequisites>

	<licenses>
		<license>
			<name>GNU General Public License</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/thorsten-k/exlp.git</url>
		<connection>scm:git:ssh://git@github.com/thorsten-k/exlp.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/thorsten-k/exlp.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	
	<developers>
		<developer>
			<id>1</id>
			<name>Thorsten Kisner</name>
			<email>t.kisner@web.de</email>
		</developer>
	</developers>
	
	<issueManagement>
	</issueManagement>
	
	<build>
		<pluginManagement>
			<plugins>
                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5</version>
                     <configuration>
                          <useReleaseProfile>false</useReleaseProfile>
                          <releaseProfiles>release</releaseProfiles>
                          <goals>deploy</goals>
                     </configuration>
                </plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.3</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
      			<plugin>
			        <groupId>org.codehaus.mojo</groupId>
			        <artifactId>versions-maven-plugin</artifactId>
			        <version>2.2</version>
				</plugin>
 				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
		        	<artifactId>maven-pmd-plugin</artifactId>
		        	<version>3.6</version>
		        	<configuration>
			        	<linkXRef>false</linkXRef>
			        </configuration>
				</plugin>
    		</plugins>
  		</pluginManagement>
		<plugins>
	         <plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>2.4.2</version>
		        <configuration>
		          <systemProperties>
		            <property>
		              <name>targetDir</name>
		              <value>${my.build.directory}</value>
		            </property>
		          </systemProperties>
		        </configuration>
			</plugin>
			<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-enforcer-plugin</artifactId>
		        <version>1.0.1</version>
		        <executions>
					<execution>
		            	<id>enforce-banned-dependencies</id>
		           		<goals><goal>enforce</goal></goals>
			            <configuration>
							<rules>
			       			<bannedDependencies>
			           			<excludes>
			              			<exclude>commons-logging:commons-logging</exclude>
			           			</excludes>
			      			</bannedDependencies>
				        	</rules>
				    		<fail>true</fail>
	            		</configuration>
          			</execution>
        		</executions>
      		</plugin>
		</plugins>
	</build>
		
	<repositories>
		<repository>
			<id>jboss.public</id>
			<name>JBoss Repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
		</repository>
		<repository>
			<id>aht.3rd</id>
			<name>AHT public</name>
			<url>https://www.aht-group.com/nexus/content/repositories/thirdparty</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus.org</id>
			<name>CodeHaus Plugin Snapshots</name>
			<url>http://snapshots.repository.codehaus.org</url>
			<releases><enabled>false</enabled></releases>
		</pluginRepository>
	</pluginRepositories>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<profiles>
    	<profile>
       		<id>ram</id>
       		<build>
       			<directory>${my.build.directory}</directory>
       		</build>
   		</profile>
   		<profile>
       		<id>release</id>
       		<build>
       			<directory>${my.build.directory}</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals><goal>jar-no-fork</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals><goal>jar</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals><goal>sign</goal></goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>only-eclipse</id>
			<activation><property><name>m2e.version</name></property></activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
			      						<pluginExecution>
			      							<pluginExecutionFilter>
			      								<groupId>org.jvnet.jaxb2.maven2</groupId>
			                					<artifactId>maven-jaxb2-plugin</artifactId>
			      								<versionRange>[0.1.10,)</versionRange>
			      								<goals><goal>generate</goal></goals>
			      							</pluginExecutionFilter>
			      							<action><ignore /></action>
			      						</pluginExecution>
			      						<pluginExecution>
			      							<pluginExecutionFilter>
			      								<groupId>org.apache.maven.plugins</groupId>
			                					<artifactId>maven-plugin-plugin</artifactId>
			      								<versionRange>[3.3,)</versionRange>
			      								<goals><goal>descriptor</goal></goals>
			      							</pluginExecutionFilter>
			      							<action><ignore /></action>
			      						</pluginExecution>
			      						<pluginExecution>
		                					<pluginExecutionFilter>
		                  						<groupId>org.apache.maven.plugins</groupId>
		                  						<artifactId>maven-enforcer-plugin</artifactId>
		                  						<versionRange>[1.0.0,)</versionRange>
		                  						<goals><goal>enforce</goal></goals>
		                					</pluginExecutionFilter>
		                					<action><ignore /></action>
		              					</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>